# algorithmer

./: README.md
chooblarin/question01/: KiwiJuiceEasy.java
chooblarin/question02/: InterestingParty.java
chooblarin/question03/: Cryptography.java
chooblarin/question04/: InterestingDigits.java
chooblarin/question05/: ThePalindrome.java
chooblarin/question06/: FriendScore.java
chooblarin/question07/: CrazyBot.java
mononeco/: .gitignore  02_InterestingParty.cpp  03_Cryptography.cpp  04_InterestingDigits.cpp  05_ThePalindrome.cpp  06_FriendScore.cpp  07_CrazyBot.cpp  CMakeLists.txt
snow_gushi/question1/: KiwiJuiceEasy.py
snow_gushi/question2/: InterestingParty.py
snow_gushi/question3/: Cryptography.py
