cmake_minimum_required(VERSION 3.10)
project(mononeco)

set(CMAKE_CXX_STANDARD 11)

add_executable(01_KiwiJuiceEasy 01_KiwiJuiceEasy.cpp)
add_executable(02_InterestingParty 02_InterestingParty.cpp)
add_executable(03_Cryptography 03_Cryptography.cpp)
add_executable(04_InterestingDigits 04_InterestingDigits.cpp)
add_executable(05_ThePalindrome 05_ThePalindrome.cpp)
add_executable(06_FriendScore 06_FriendScore.cpp)